syntax = "proto3";

package user;

option go_package = "api/user;user";

// UserService 定义
service UserService {
  // 用户注册
  rpc Register(RegisterRequest) returns (RegisterResponse); // no auth
  // 用户登录
  rpc Login(LoginRequest) returns (LoginResponse); // no auth

  rpc UserInfo(UserInfoRequest) returns (UserInfoResponse);
}

message RegisterRequest {
  string name = 1;
  string name_kana = 2;
  string avatar = 3; // 可选
  string email = 4;
  string phone = 5;
  string password = 6;
  string device_id = 7;
}

message RegisterResponse {}

message LoginRequest {
  string email = 1;
  string password = 2;
  string device_id = 3;
}

message LoginResponse {
  string jwt = 1;
}

message UserInfoRequest {}
message UserInfoResponse {
  string name = 1;
  string name_kana = 2;
  string avatar = 3;
  string email = 4;
  string phone = 5;
  string role = 6;
  string audit_status = 7;
}


